--- a/public/index.html
+++ b/public/index.html
@@ -14,8 +14,8 @@
       {
         "@context": "https://schema.org",
         "@type": "Organization",
-        "url": "https://devfestindia.com/",
-        "logo": "https://raw.githubusercontent.com/DevFest-India/website-data-2021/main/devfestindia.jpg"
+        "url": "https://devfest-2023-spain.web.app/",
+        "logo": "https://github.com/alfredobs97/devfest-spain-2023/blob/c776db8bf06fd21afd530504050c49a81f54482f/src/assets/img/badge.png"
       }
       </script>
 
@@ -25,33 +25,33 @@
   <meta content="black-translucent" name="apple-mobile-web-app-status-bar-style" />
   <meta name="description"
     content="An annual event hosted by the Google Developers Group across the world to bring the technology closer to the developers." />
-  <meta name="author" content="DevFest India Team" />
+  <meta name="author" content="DevFest Spain Team" />
   <meta property="keywords"
-    content="DevFest India, DevFest, DevFest 2023, DevFest 2022, DevFest India, DevFest India 2021, GDG India, GDG DevFest, GDG DevFest India, GDG, Google DevFest, wtm, WomenTeckmakers, Women Teckmakers, Google Developer Groups,Google Developer Group, Google Developers,Google Developer,developer community, developer communities,developer, developers,programmer, programmers, programming, software engineering, software engineer, software engineers, coding, Developer meetup,Developer meetups, developer meetup, hackathons,codelabs, study jam, study jams, devmelas,Developer event, Developer events, Virtual developer event, Virtual developer events" />
+    content="DevFest Spain, DevFest, DevFest 2023, DevFest 2022, DevFest Spain, DevFest Spain 2021, GDG Spain, GDG DevFest, GDG DevFest Spain, GDG, Google DevFest, wtm, WomenTeckmakers, Women Teckmakers, Google Developer Groups,Google Developer Group, Google Developers,Google Developer,developer community, developer communities,developer, developers,programmer, programmers, programming, software engineering, software engineer, software engineers, coding, Developer meetup,Developer meetups, developer meetup, hackathons,codelabs, study jam, study jams, devmelas,Developer event, Developer events, Virtual developer event, Virtual developer events" />
   <!-- SEO Tags -->
 
   <!-- SEO Facebook Tags -->
-  <meta property="og:title" content="DevFest India 2023" />
+  <meta property="og:title" content="DevFest Spain 2023" />
   <meta property="og:type" content="website" />
   <meta property="og:image"
-    content="https://raw.githubusercontent.com/DevFest-India/website-data-2021/main/devfestindia.jpg" />
+    content="https://github.com/alfredobs97/devfest-spain-2023/blob/c776db8bf06fd21afd530504050c49a81f54482f/src/assets/img/badge.png" />
   <meta property="og:image"
-    content="https://raw.githubusercontent.com/DevFest-India/website-data-2021/main/devfestindia.jpg" />
-  <meta property="og:url" content="https://devfestindia.com/" />
-  <meta property="og:site_name" content="DevFest India 2022" />
+    content="https://github.com/alfredobs97/devfest-spain-2023/blob/c776db8bf06fd21afd530504050c49a81f54482f/src/assets/img/badge.png" />
+  <meta property="og:url" content="https://devfest-2023-spain.web.app/" />
+  <meta property="og:site_name" content="DevFest Spain 2023" />
   <meta property="og:description"
     content="An annual event hosted by the Google Developers Group across the world to bring the technology closer to the developers." />
   <!-- SEO Facebook Tags -->
 
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:url" content="https://devfestindia.com/" />
-  <meta name="twitter:title" content="DevFest India 2023" />
+  <meta name="twitter:url" content="https://devfest-2023-spain.web.app/" />
+  <meta name="twitter:title" content="DevFest Spain 2023" />
   <meta name="twitter:description"
     content="An annual event hosted by the Google Developers Group across the world to bring the technology closer to the developers." />
   <meta name="twitter:image:src"
-    content="https://raw.githubusercontent.com/DevFest-India/website-data-2021/main/devfestindia.jpg"
+    content="https://github.com/alfredobs97/devfest-spain-2023/blob/c776db8bf06fd21afd530504050c49a81f54482f/src/assets/img/badge.png"
     data-react-helmet="true" />
-  <meta name="twitter:tags" content="DevFest India, DevFest, DevFest 2023, DevFest India, DevFest Indi" />
+  <meta name="twitter:tags" content="DevFest Spain, DevFest, DevFest 2023, DevFest Spain" />
   <!-- SEO Twitter Tags -->
 
 
